# timesheet-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  setup.py
src/: main.rs
src/commands/: init.rs
src/config/: mod.rs  schema.rs
src/jira/: client.rs  mod.rs  models.rs
timesheet/: cli.py  config.py  fill.py  harvest_client.py  jira_client.py
