[package]
name = "timesheet-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
config = "0.15.25"
directories = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.11.10"
log = "0.4.32"
reqwest = "0.13.4"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.8.26"
toml = "1.1.2"

[[bin]]
name = "timesheet"
path = "src/main.rs"
